# pc-ble-driver-java

./: .gitignore  CMakeLists.txt  README.md
example/: example-cs.csproj  example-vc.vcxproj  example.c  example.cs  example.h  example.i  runme.cs
java/ble/: pom.xml
java/ble/src/main/java/: BLE_COMMON_CFGS.java  BLE_COMMON_EVTS.java  BLE_COMMON_OPTS.java  BLE_COMMON_SVCS.java  BLE_CONN_CFGS.java  BLE_GAP_CFGS.java  BLE_GAP_EVTS.java  BLE_GAP_OPTS.java  BLE_GAP_SVCS.java  BLE_GATTC_EVTS.java  BLE_GATTC_SVCS.java  BLE_GATTS_CFGS.java  BLE_GATTS_EVTS.java  BLE_GATTS_SVCS.java  BLE_L2CAP_EVTS.java  BLE_L2CAP_SVCS.java  CallBackFunction1.java  CallBackFunction2.java  CallBackFunction3.java  Example.java  SWIGTYPE_p_f_p_adapter_t_enum_sd_rpc_app_status_t_p_q_const__char__void.java  SWIGTYPE_p_f_p_adapter_t_enum_sd_rpc_log_severity_t_p_q_const__char__void.java  SWIGTYPE_p_f_p_adapter_t_p_ble_evt_t__void.java  SWIGTYPE_p_p_ble_gap_addr_t.java  SWIGTYPE_p_p_ble_gap_id_key_t.java  SWIGTYPE_p_p_ble_gap_irk_t.java  SWIGTYPE_p_signed_char.java  TestCallback.java  adapter_t.java  ble_cfg_t.java  ble_common_cfg_t.java  ble_common_cfg_vs_uuid_t.java  ble_common_evt_t.java  ble_common_opt_conn_evt_ext_t.java  ble_common_opt_pa_lna_t.java  ble_common_opt_t.java  ble_conn_cfg_t.java  ble_data_t.java  ble_evt_hdr_t.java  ble_evt_t.java  (+145 more)
java/ble/src/main/resources/: pc_ble_driver_sd_api_v5.i  pc_ble_driver_sd_api_v5JAVA_wrap.cxx
swig/: pc_ble_driver.i.in
